# Oracle

./: .env  .env.example  .gitattributes  .gitignore  README.md  RUN.md  build.sh  pyproject.toml  requirements-finetune.txt  requirements.txt  run.sh  train.sh  validation.sh
.codex/: README.md
.codex/agents/: oracle-architect.md  oracle-code-reviewer.md  oracle-debugger.md  oracle-test-specialist.md
.codex/commands/: audit-codebase.md  diagnose.md
.codex/rules/: oracle-development.md  oracle-search-and-testing.md
.codex/skills/oracle-device-capture/: SKILL.md
.codex/skills/oracle-report-quality/: SKILL.md
.codex/skills/oracle-tdd/: SKILL.md
configs/: prompts.json  prompts_compatibility.json  prompts_debug.json  prompts_legacy.json  prompts_personal.json  raspberry_pi.env  saju_rules.json  system_instructions.json
data/: face_recommendations.sqlite  physiognomy_rules.sqlite
data/finetune/: README.md  korean_cute_style_sources.json
docs/: distributed_inference.md  distributed_inference_architecture.md  face_feature_integration_plan.md  finetune_qlora.md  oracle_flow.puml  oracle_requirements_spec.md  oracle_service_blueprint.md  prompts.md  raspberry_pi.md
models/: README.md  model.gguf.part01  model.gguf.part02
samples/reports/: compatibility_report.html  oracle_report_kimseungjin.html  oracle_sample_report.html
scripts/: build_manse_db.py  run_llama_server.sh
scripts/finetune/: build_korean_cute_dataset.py  common.sh  train_qlora.py  validate_finetune.py
src/oracle_report/: cli.py  compatibility_score.py  config.py  llm.py  models.py  physiognomy.py  prompt_templates.py  recommender.py  report.py  report_html.py  report_text.py  web.py  workflow.py
src/oracle_report/finetune/: __init__.py  dataset.py  train_qlora.py  validate.py
src/oracle_report/saju/: calendar.py  rules.py  (+2 more)
systemd/: llama-server.service  llama-server.service.template  oracle-report.service.template
test-results/: README.md  pytest-latest.txt
tests/: test_build_scripts.py  test_camera.py  test_capture_runtime.py  test_capture_state.py  test_config.py  test_distributed.py  test_finetune_dataset.py  test_landmark_rules.py  test_llm.py  test_llm_cli.py  test_manse_repository.py  test_manse_runtime.py  test_packaged_manse_db.py  test_prompt_cli.py  test_recommender.py  test_report_html.py  test_report_prompt.py  test_web.py  test_workflow.py
(+11 files in other folders)
