[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-report"
version = "0.1.0"
description = "Raspberry Pi face-capture, physiognomy, and saju report harness"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hyunwoo Park" }
]
dependencies = [
    "Flask>=3.0",
    "numpy>=1.23",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
camera = [
    "opencv-python>=4.8",
]
pi = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
]
quality = [
    "mediapipe>=0.10",
]
test = [
    "pytest>=7.0",
]
dev = [
    "pytest>=7.0",
]
finetune = [
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "datasets>=2.20",
    "peft>=0.12",
    "protobuf>=4.25",
    "sentencepiece>=0.2",
    "torch>=2.4",
    "transformers==5.5.0",
    "trl>=0.9",
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "unsloth_zoo @ git+https://github.com/unslothai/unsloth-zoo.git",
]

[project.scripts]
oracle-report = "oracle_report.cli:main"
oracle-build-physiognomy-db = "oracle_report.vision.physiognomy_rule_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oracle_report = ["static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
